2010-05-25  Miloslav Trmač  <mitr@redhat.com>

	* src/utils.py (write_new_file): Rename parameter.

2010-04-08  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py (OuterBuffer.read, OuterBuffer.write)
	(OuterBuffer.pending_inner_packets, OuterBuffer.add_outer_data): Add
	debug output.

	* src/double_tls.py (_SplittingBuffer._check_shutdown): Fix variable
	name, don't shut down self.__outer_dst over and over.

	* src/double_tls.py (_ForwardingBuffer._handle_errors)
	(_ForwardingBuffer._receive): Comment on possible combinations of
	PR_POLL_IN with other flags.
	(_CombiningBuffer._handle_errors)
	(_CombiningBuffer.__receive_inner)
	(_CombiningBuffer.__receive_outer)
	(_SplittingBuffer._handle_errors, _SplittingBuffer._receive)
	(_InnerBridgingBuffer._handle_errors)
	(_InnerBridgingBuffer._receive): If PR_POLL_IN is set, ignore
	PR_POLL_HUP and PR_POLL_ERR in this iteration.

2010-04-06  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py: (__next_id, __ids, _id): Uncomment.
	(_debug): New function.  Use everywhere instead of commented-out `print'
	to make debugging easier to enable.
	(_CombiningBuffer._prepare_poll): Fix a debug print pasto.

2010-04-02  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py: Drop some unused imports.

2010-03-19  Miloslav Trmač  <mitr@redhat.com>

	* doc/protocol-design.txt: Minor clarifications.

2010-03-10  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (SignRpmRequestType.forward_request_payload): Work with
	recent urlgrabber as well.

2009-07-31  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.97.
	* NEWS: Update.

	* src/bridge.py (copy_data, StoringProxy.stored_read)
	* src/utils.py (u8_unpack, u32_unpack, read_fields): Rename "bytes"
	to avoid a conflict with a built-in.

	* src/settings.py.in (koji_do_proxy_auth): New variable.
	* src/bridge.py (SignRpmRequestType.__koji_get_session): Proxy
	authenticate as the client if settings allow it.
	* README: Document proxy authentication is now required.